--- a/help/cadtools_help.html
+++ b/help/cadtools_help.html
@@ -340,6 +340,34 @@
      </div>
     </div>
    </div>
+      <div style="background-color:white; color:#422808; padding:0px; margin:0px 0px 20px 0px;">
+   
+    <div style="font-weight:bold; margin:0px 0px 5px 0px;">
+    Node Alignment</div>
+    <div style="margin-left:0px; margin-bottom:1em; font-size:10pt">
+
+     <div id="function">
+      <div id="head">
+       <img style="border: 1px solid black;"
+       src="images/selectXpoints.png" />
+      </div>
+      <div style="margin:0px 0px 5px 0px; color:#000000;">This function alignes nodes when a layer is in editing mode. You have to select at least two nodes two align them.</div>
+     </div>
+	 <div id="function">
+      <div id="head">
+       <img style="border: 1px solid black;"
+       src="images/alignnodes_left.png" />
+       <img style="border: 1px solid black;"
+       src="images/alignnodes_right.png" />
+       <img style="border: 1px solid black;"
+       src="images/alignnodes_top.png" />
+       <img style="border: 1px solid black;"
+       src="images/alignnodes_bottom.png" />
+      </div>
+      <div style="margin:0px 0px 5px 0px; color:#000000;">After selecting at least two nodes you can align them to the leftmost/rightmost/uppermost/lowermost node of the selected nodes.</div>
+     </div>
+     </div>
+   </div>   
    <div style="background-color:white; color:#422808; padding:0px; margin:0px 0px 20px 0px;">
    
     <div style="font-weight:bold; margin:0px 0px 5px 0px;">
